<resources>
    <string name="app_name">StoryMapper</string>

    <!-- Login Activity -->
    <string name="txtV_SignIn">Acceder a StoryMapper</string>
    <string name="txtV_User">Nombre de usuario</string>
    <string name="txtV_Password">Contraseña</string>
    <string name="btn_SignIn">Acceder</string>
    <string name="btn_GoogleSign">Acceder con Google+</string>
    <string name="btn_FBSign">Acceder con Facebook</string>
    <string name="btn_Remember"><u>Recuérdame</u></string>
    <string name="btn_SignUp">Registrarme</string>

    <string name="txtV_SignUp">Regístrate en StoryMapper</string>
    <string name="txtV_InfoSignUp">¡Comienza a crear historias!</string>
    <string name="txtV_UserSignUp">Usuario:</string>
    <string name="txtV_UserNameSignUp">Nombre:</string>
    <string name="txtV_EmailSignUp">Correo electrónico:</string>
    <string name="txtV_PasswordSignUp">Contraseña:</string>

    <string name="errorWrongUserPassword">Datos incorrectos</string>

    <!-- Books Activity -->
    <string name="title_Books">Proyectos</string>
    <string name="title_Characters">Personajes</string>
    <string name="tID_bookTitle">Título</string>
    <string name="tID_bookDescription">Descripción</string>
    <string name="spn_Genre">Género</string>
    <string name="tID_nWords">Número de palabras</string>
    <string name="btn_manageBooks">Gestionar proyecto</string>
    <string name="btn_seeFactions">Ver facciones</string>
    <string name="btn_seeLocations">Ver localizaciones</string>

    <string-array name="bookGenres">
        <item>Terror</item>
        <item>Fantasía</item>
        <item>Noire</item>
        <item>Steampunk</item>
        <item>Ciencia ficción</item>
        <item>Cyberpunk</item>
        <item>Romántica</item>
    </string-array>

    <string name="bookTitleEmpty">El proyecto no tiene título</string>
    <string name="bookDescEmpty">El proyecto no tiene descripción</string>
    <string name="bookGenreEmpty">El proyecto no tiene género</string>
    <string name="bookWordsEmpty">El proyecto no tiene palabras mínimas</string>

    <!-- Characters Activity -->

    <!-- Character Activity -->
    <string name="tiD_CharacterName">Nombre</string>
    <string name="tiD_CharacterDescription">Descripción</string>
    <string name="txtV_CharacterRelationships">Relaciones:</string>
    <string name="txtV_CharacterFaction">Facción:</string>
    <string name="txtV_CharactersHome">Hogar:</string>
    <string name="btn_CharacterRelationShips">Ver relaciones</string>

    <string name="characterDescEmpty">El personaje no tiene descripción</string>
    <string name="characterNameEmpty">El personaje no tiene nombre</string>

    <!-- Faction Activity -->
    <string name="tiD_FactionName">Nombre de facción</string>
    <string name="tiD_FactionObjetive">Objetivo</string>
    <string name="txtV_FactionBarrack">Sede</string>

    <string name="factionDescEmpty">La facción no tiene objetivo</string>
    <string name="factionNameEmpty">La facción no tiene nombre</string>

    <!-- Location Activity -->
    <string name="tiD_LocationName">Nombre de localización</string>
    <string name="tiD_LocationDesc">Descripción</string>

    <string name="locationDescEmpty">La localización no tiene descripción</string>
    <string name="locationNameEmpty">La localización no tiene nombre</string>

    <!-- showDialog, delete item -->
    <string name="action_delete_book">Eliminar</string>

    <string name="btn_dialog_confirm">Confirmar</string>
    <string name="btn_dialog_cancel">Cancelar</string>
    <string name="btn_dialog_roger">¡Genial!</string>

    <!-- NavigationDrawer -->
    <string name="action_home">Inicio</string>
    <string name="action_books">Proyectos</string>
    <string name="action_factions">Facciones</string>
    <string name="action_locations">Localizaciones</string>
    <string name="action_advice">Consejos</string>
    <string name="navigation_subheader">Más</string>
    <string name="action_help">Ayuda</string>
    <string name="action_about">Sobre mí</string>

    <!-- Errors on register -->
    <string name="userEmptyError">El usuario esta vacio</string>
    <string name="emailAlreadyExits">Un usuario con este correo ya existe</string>
    <string name="passwordError">Contraseña no valida</string>
    <string name="emailEmptyError">Email esta vacio</string>
    <string name="passwordEmptyError">Contraseña esta vacia</string>
    <string name="userError">Usuario no valido</string>
    <string name="userAlreadyExits">Un usuario con este nombre ya existe</string>
    <string name="emailError">Correo no valido</string>
    <string name="usernameEmptyError">Necesitas un nombre</string>

</resources>
