<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_books"
            android:icon="@drawable/ic_books"
            android:title="@string/action_books"/>
        <item
            android:id="@+id/action_locations"
            android:icon="@drawable/ic_locations"
            android:title="@string/action_locations"/>
        <item
            android:id="@+id/action_factions"
            android:icon="@drawable/ic_factions"
            android:title="@string/action_factions"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/navigation_subheader">

        <menu>
            <item
                android:id="@+id/action_advice"
                android:title="@string/action_advice"/>
            <item
                android:id="@+id/action_help"
                android:title="@string/about_contact_us"/>

            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"/>
        </menu>

    </item>

</menu>