<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:weightSum="1"
    tools:context=".ui.user.LoginActivity">

    <ImageView
        android:id="@+id/imgV_storymapperLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txtV_SignIn_marginBottom"
        android:layout_weight="0.07"
        android:text="@string/txtV_SignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/txtV_UserNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edT_UsernameSignUp"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedittexts"
        android:inputType="text"/>

    <TextView
        android:text="@string/txtV_UserSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edT_UserSignUp"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedittexts"
        android:inputType="text"/>

    <TextView
        android:text="@string/txtV_PasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edT_PasswordSignUp"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedittexts"
        android:inputType="textPassword"/>

    <TextView
        android:text="@string/txtV_EmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edT_EmailSignUp"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedittexts"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/txtV_SignIn_marginBottom"
        android:layout_weight="0.07"
        android:text="@string/txtV_InfoSignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/btn_SignUp"
        style="@style/Widget.Button.Transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btn_SignIn_marginBottom"
        android:background="@color/colorFacebook"
        android:onClick="onClick_EnterApp"
        android:text="@string/btn_SignUp" />

</LinearLayout>
