<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lly_login_padding"
    android:weightSum="1"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imgV_storymapperLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtV_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txtV_SignIn_marginBottom"
        android:layout_weight="0.07"
        android:text="@string/txtV_SignIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/txtV_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:labelFor="@+id/edT_User"
        android:text="@string/txtV_User"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/edT_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edT_User_marginBottom"
        android:background="@drawable/shapeedittexts"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtV_Passw"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:labelFor="@+id/edT_Passw"
        android:text="@string/txtV_Password"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/edT_Passw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapeedittexts"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/lly_SignOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/lly_SignOptions_padding">

        <CheckBox
            android:id="@+id/chkB_Remember"
            style="@style/CheckBox_RememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/btn_Remember" />

        <TextView
            android:id="@+id/txtV_SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_SignUp"
            android:textAppearance="@android:style/TextAppearance.Small" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_SignIn"
        style="@style/Widget.Button.Transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btn_SignIn_marginBottom"
        android:background="@color/colorFacebook"
        android:onClick="onClick_EnterApp"
        android:text="@string/btn_SignIn" />

    <Button
        android:id="@+id/btn_GoogleLogin"
        style="@style/Widget.Button.Transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGoogle"
        android:drawableLeft="@drawable/ic_google"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/btn_GoogleSign" />

</LinearLayout>